* Added db list to setup.pl when no db is entered and credentials allow login
  to "postgres" db. (Chris T)
* Added copy db utility to setup.pl for testing dbs (Chris T)
* Fixing is_zero errors on ar/ap transaction screens w/tax incldued (Chris T)
* Fixing csv ar transactions not showing taxes (Chris T, 3589640)
* Fixing demo quotations having descriptions taking too much space (Chris T)

Changelog for 1.3.27
* Detect whether ledgersmb.conf exists during Makefile.PL run and create if
  not (Chris T)
* Fixed prepare-company-database.sh clobbering the Apache configuration on
  every run (Chris T, 3595000)
* Fixed error sorting recon search by account (Chris T, h/t Erik H, 3589473)
* Users are now migrated with nonsense passwords from 1,2 (Chris T, 3587257)
* Upgrade now handles new total column in jcitems properly (Chris T)
* Fixed configure_apache.sh, read input, change of file name from 
  ledgersmb-httpd.conf to ledgersmb-httpd.conf.template (Havard S)
* Update INSTALL - section "Adding configuration to Apache 2.x" (Havard S)
* Fixed bad targets of AP Aging and Tax Paid reports (Chris T, 3594694)
* By default, customer/vendor search orders by name (Chris T, 3596195)
* Fixed erroneous error in pod coverage test (Chris T)
* Updated LedgerSMB.pot, added script to rebuilt and merge to po's (Chris T)
  -- includes item 3598644 filed by Havard S
* Fixed xgettext error in aa.pl (Chris T)
* Fixed Default language ignored when emailing rfq (Chris T, 3588998)

Chris T is Chris Travers
Havard S is Havard Sorli

Changelog for 1.3.26
* Added db statistics post-upgrade and pre/post rebuild (Chris T, 3586113)
* Merged in fcgi support from addons (Chris T)
* Clarified UI for changing password vs settings (Chris T, 3588810) 
* Fixed eca selection issues when creating invoices (Chris T, 3588301)
* Added demo templates with for invoices with attached images (Chris T)
* Fixed attached images not appearing in templates (Chris T)